--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1486,14 +1486,21 @@ letter-spacing: -0.4px;
     }
     .bar i{
         font-size: 40px;
-        top: 4%;
+        /* top: 4%; */
         right: 20%;
         /* position: sticky; */
         position: fixed;
 
         
     }
+
+    .main1{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+       
     .none-img{
+        width: 380px;
         display: block;
         display: flex;
         flex-direction: column;
@@ -1504,20 +1511,23 @@ letter-spacing: -0.4px;
 
     .none-img img{
         width: 380px;
-        margin-left: 50px;
+        padding-left: 50px; 
 
     }
     .article1 {
         text-align: center;
+        margin-left: 70px;
     }
     .article1 h1{
-        margin: 44px;
+        /* margin: 44px; */
         text-align: center;
         font-size: 30px;
+        margin-top: 28px;
+        
         
     }
     .article1 p{
-        margin: 36px;
+        /* margin: 36px; */
         font-size: 18px;
         width: 291px;
         color: var(--Gray, #66645E);
@@ -1527,6 +1537,11 @@ font-style: normal;
 font-weight: 400;
 line-height: 32px; /* 177.778% */
 letter-spacing: -0.36px;
+margin-top: 24px;
+    }
+    .article1 button{
+        display: flex;
+        justify-content: center;
     }
 
     /* .none-img h1{
@@ -1581,48 +1596,24 @@ line-height: 32px; /* 177.778% */
         display: none;
     }
 
-.main1{
+/* .main1{
     display: flex;
     flex-direction: column-reverse;
-}
+} */
    
 
         
     .section1 h1{
-        /* width: 276px;
-        height: 80px;
-        font-size: 40px;
-        line-height: 50px;
-        margin-top: 80px;
-        color: var(--Black, #303031);
-text-align: center;
-font-family: Roboto;
-font-size: 30px;
-font-style: normal;
-font-weight: 700;
-line-height: 40px; /* 133.333% */
-/* margin-bottom: 24px;
-z-index: 1; */ 
-display: none;
+       display: none;
 
 
     }
 
     .section1 p{
-        /* width: 291px;
-height: 131px;
-flex-shrink: 0;
-color: var(--Gray, #66645E);
-text-align: center;
-font-family: "Open Sans";
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 177.778% */
-/* letter-spacing: -0.36px; */ 
-display: none;
+        display: none;
     }
     .section1 button{
+        width: 220px;
         display: inline-flex;
 padding: 20px 24px;
 align-items: center;
@@ -1635,28 +1626,30 @@ font-style: normal;
 font-weight: 700;
 line-height: 24px; /* 133.333% */
 /* margin-left: 240px; */
+margin-left: 73px;
+margin-top: 47px;
+
     }
     .section1-bg{
         display: none;
-/* width: 100%;
-height: auto;
-padding: 0.007px 0px 0.111px 0px;
-justify-content: center;
-align-items: center;
-flex-shrink: 0;
-margin-left: 39.94px;
-margin-right: 29.68px; */
+    }
 
+
+    .main2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .section2{
         width: 291px;
         height: 235px;
+        margin-top: 118px;
         
         
     }
 
     .section2 h2{
-        /* width: 266px; */
+         width: 266px;
         height: 87px;
         flex-shrink: 0;
         color: var(--Black, #303031);
@@ -1670,8 +1663,8 @@ line-height: 40px; /* 133.333% */
     }
 
     .section2 p{
-        /* width: 291px; */
-/* height: 109px; */
+        width: 291px;
+ height: 109px; 
 flex-shrink: 0;
 color: var(--Gray, #66645E);
 text-align: center;
@@ -1679,7 +1672,7 @@ font-family: "Open Sans";
 font-size: 18px;
 font-style: normal;
 font-weight: 400;
-line-height: 32px; /* 177.778% */
+/* line-height: 32px; */
 letter-spacing: -0.36px;
 /* margin-left: -50px; */
     }
@@ -1688,11 +1681,14 @@ letter-spacing: -0.36px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        /* justify-content: center; */
         max-width: 320px;
         border-width: 320px;
         /* margin-right: 700px; */
         gap: 49px;
-        margin-top: 120px;
+        /* margin-top: 120px; */
+        margin-left: 70px;
+        
     }
 
 
