--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1460,7 +1460,7 @@ letter-spacing: -0.4px;
 @media screen and (max-width: 450px){
 
     .body{
-        width: 450px;
+        width: 100%;
         height: auto;
     }
     *{
@@ -1487,9 +1487,12 @@ letter-spacing: -0.4px;
     .bar i{
         font-size: 40px;
         /* top: 4%; */
-        right: 20%;
+        /* right: 20%; */
         /* position: sticky; */
         position: fixed;
+        top: 0;
+        right: 0;
+        padding: 10px;
 
         
     }
@@ -1510,38 +1513,55 @@ letter-spacing: -0.4px;
     }
 
     .none-img img{
-        width: 380px;
-        padding-left: 50px; 
+        display: flex;
+        justify-content: center;
+        width: 400px;
+        /* height: 229px; */
+        padding-left: 80px; 
 
     }
     .article1 {
         text-align: center;
-        margin-left: 70px;
+        width: ;
+        margin-left: 150px;
     }
     .article1 h1{
         /* margin: 44px; */
         text-align: center;
         font-size: 30px;
         margin-top: 28px;
+        color: var(--Black, #303031);
+font-family: Roboto;
+font-style: normal;
+font-weight: 700;
+line-height: 40px; /* 133.333% */
         
         
     }
     .article1 p{
         /* margin: 36px; */
         font-size: 18px;
-        width: 291px;
         color: var(--Gray, #66645E);
-text-align: center;
+        text-align: center;
 font-family: "Open Sans";
 font-style: normal;
 font-weight: 400;
 line-height: 32px; /* 177.778% */
 letter-spacing: -0.36px;
 margin-top: 24px;
+width: 291px;
+height: 109px;
+flex-shrink: 0;
     }
     .article1 button{
         display: flex;
         justify-content: center;
+        width: 220px;
+        height: 64px;
+     flex-shrink: 0;
+margin-left: 220px;
+/* text-align: center; */
+
     }
 
     /* .none-img h1{
